# dire

./: .gitignore  CMakeLists.txt  CMakePresets.json  Project1.sln  README.md  vcpkg.json
.github/workflows/: cmake.yml  release.yml
CMake/: Catch2.cmake  DireConfig.cmake  Doxygen.cmake  FindRapidJSON.cmake  LTO.cmake  RapidJSON.cmake  Rapidjson.cmake  StaticAnalysis.cmake  cppcheck_suppressions.txt
Dire/dire/: BinaryHeaders.h  Dire.h  DireArrayDataStructureHandler.h  DireArrayDataStructureHandler.inl  DireAssert.h  DireBinaryDeserializer.cpp  DireBinaryDeserializer.h  DireBinarySerializer.cpp  DireBinarySerializer.h  DireDefines.h.in  DireEnumDataStructureHandler.h  DireEnumDataStructureHandler.inl  DireEnums.h  DireIntrusiveList.h  DireIntrusiveList.inl  DireJSONDeserializer.cpp  DireJSONDeserializer.h  DireJSONSerializer.cpp  DireJSONSerializer.h  DireMacros.h  DireMapDataStructureHandler.h  DireMapDataStructureHandler.inl  DireProperty.h  DirePropertyMetadata.h  DireReflectable.cpp  DireReflectable.h  DireReflectableID.h  DireSerialization.h  DireSingleton.h  DireStaticTypeCounter.h  DireString.h  DireSubclass.h  DireTypeHandlers.h  DireTypeInfo.cpp  DireTypeInfo.h  DireTypeInfoDatabase.cpp  DireTypeInfoDatabase.h  DireTypeTraits.h  DireTypes.h
Dire/dire/Handlers/: DireArrayDataStructureHandler.h  DireArrayDataStructureHandler.inl  DireEnumDataStructureHandler.h  DireMapDataStructureHandler.h  DireMapDataStructureHandler.inl  DireTypeHandlers.h  DireTypeHandlers.inl
Dire/dire/Serialization/: DireBinaryDeserializer.cpp  DireBinaryDeserializer.h  DireBinaryHeaders.h  DireBinarySerializer.cpp  DireBinarySerializer.h  DireJSONDeserializer.cpp  DireJSONDeserializer.h  DireJSONSerializer.cpp  DireJSONSerializer.h  DireSerialization.h
Dire/dire/Types/: DireTypeInfo.cpp  DireTypeInfo.h  DireTypeInfo.inl  DireTypeInfoDatabase.cpp  DireTypeInfoDatabase.h  DireTypes.h
Dire/dire/Utils/: DireIntrusiveList.h  DireIntrusiveList.inl  DireMacros.h  DireSingleton.h  DireString.h  DireTypeTraits.h
Project1/: Project1.vcxproj  Source.cpp
docs/: DireArrayDataStructureHandler_8h_source.html  DireBinaryDeserializer_8h_source.html  DireBinaryHeaders_8h_source.html  DireBinarySerializer_8h_source.html  DireEnumDataStructureHandler_8h_source.html  DireEnums_8h_source.html  DireIntrusiveList_8h_source.html  DireJSONDeserializer_8h_source.html  DireJSONSerializer_8h_source.html  DireMacros_8h_source.html  DireMapDataStructureHandler_8h_source.html  DirePropertyMetadata_8h_source.html  DireProperty_8h_source.html  DireReflectableID_8h_source.html  DireReflectable_8h_source.html  DireSerialization_8h_source.html  DireString_8h_source.html  DireSubclass_8h_source.html  DireTypeHandlers_8h_source.html  DireTypeInfoDatabase_8h_source.html  DireTypeInfo_8h_source.html  DireTypeTraits_8h_source.html  DireTypes_8h_source.html  Dire_8h_source.html  _dire_8h_source.html  _dire_array_data_structure_handler_8h_source.html  _dire_binary_deserializer_8h_source.html  _dire_binary_headers_8h_source.html  _dire_binary_serializer_8h_source.html  _dire_enum_data_structure_handler_8h_source.html  _dire_enums_8h_source.html  _dire_intrusive_list_8h_source.html  _dire_j_s_o_n_deserializer_8h_source.html  _dire_j_s_o_n_serializer_8h_source.html  _dire_macros_8h_source.html  _dire_map_data_structure_handler_8h_source.html  _dire_property_8h_source.html  _dire_property_metadata_8h_source.html  _dire_reflectable_8h_source.html  _dire_reflectable_i_d_8h_source.html  (+443 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  (+4 more)
tests/: BasicTests.cpp  CMakeLists.txt  EnumTests.cpp  FunctionTests.cpp  MacroTests.cpp  PropertyTests.cpp  ReflectableTests.cpp  SerializationTests.cpp  TestClasses.h  TypeInfoDatabaseTests.cpp  TypeTraitsTests.cpp
tests/CMake/: Catch2.cmake
